311. Working with "preventDefault()"

--- a/events.html
+++ b/events.html
@@ -14,5 +14,11 @@
       <button>Click me</button>
       <button>Click me also!</button>
     </div>
+    <section id="longsection"></section>
+    <form action="">
+      <label for="input">TItlte</label>
+      <input id="input" type="text" />
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
